# Radiance3D

./: .gitignore  CMakeCache.txt  CMakeLists.txt  app.py  cgltf.h  cube.glb  engine.cpp  floor.glb  gltf_loader.h  math_core.h  mesh.h  monkey.glb  obj_loader.h  pyproject.toml  radiance3d.cp314-win_amd64.pyd  scene.glb  scene.h  shader.h  sponza rough blockout.glb  texture.h
.github/workflows/: wheels.yml
glad/include/glad/: glad.h
glad/src/: glad.c
