[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "radiance3d"
version = "0.1.1"
description = "A custom hardware-accelerated 3D graphics and physics engine"
requires-python = ">=3.8"

[tool.scikit-build]
# This tells the build system to use your existing CMakeLists.txt
cmake.version = ">=3.15, <3.27" 
ninja.version = ">=1.5"